--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Reference guide for regular expressions in Python</title>
+<title>Quick reference for regular expressions in Python</title>
 <link rel="stylesheet" href="./styles.css" />
 </head>
 <body>
 
-<h1>Reference guide for regular expressions in Python</h1>
+<h1>Quick reference for regular expressions in Python</h1>
   
   <nav>
   <ul>
