--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <h2 id='matching'>Matching text patterns</h2>
 <button class="collapsible">Matching text literally</button>
 <div class="content">
-  <p><strong>Use a string literal (concatenate ordinary characters)</strong></p>
+  <p><strong>Use a string literal</strong></p>
   <p>Case sensitive, e.g. reg matches “reg” in “regex”,  but not in “Regex”
 The re.I (re.IGNORECASE) flag makes matching case-insensitive in a searching function.
 </p>
