--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ The <span class ='code'>re.I (re.IGNORECASE)</span> flag makes matching case-ins
 <button class="collapsible">Matching any single digit</button>
 <div class="content">
   <p><strong>Use <span class ='code'>\d</span></strong></p>
-  <p>\<span class ='code'>\d</span> is shorthand for <span class ='string'>[0-9]</span>. <span class ='code'>\D</span> is the opposite of <span class ='code'>\d</span>, shorthand for <span class ='string'>[^0-9]</span>.</p>
+  <p><span class ='code'>\d</span> is shorthand for <span class ='string'>[0-9]</span>. <span class ='code'>\D</span> is the opposite of <span class ='code'>\d</span>, shorthand for <span class ='string'>[^0-9]</span>.</p>
 </div>
 <button class="collapsible">Matching a whitespace</button>
 <div class="content">
@@ -47,7 +47,7 @@ The <span class ='code'>re.I (re.IGNORECASE)</span> flag makes matching case-ins
 </div>
 <button class="collapsible">Matching any character</button>
 <div class="content">
-  <p><strong><span class ='code'> . </span>(dot) matches any single character (including a space), except the newline <span class ='code'>(\n)</span> character</strong></p>
+  <p><strong><span class ='code'>.</span> (dot) matches any single character (including a space), except the newline <span class ='code'>\n</span> character</strong></p>
   <p>Using the <span class ='code'>re.S (re.DOTALL)</span> flag with a searching function forces the dot to match a new line character.
 </p>
 </div>
@@ -56,52 +56,52 @@ The <span class ='code'>re.I (re.IGNORECASE)</span> flag makes matching case-ins
   <p><strong>Put the set of matching options in square brackets: <span class ='code'>[...]</span>. Any of the characters enclosed within the square brackets <span class ='code'>[ ]</span> is a matching option for a single character from the input text.
 </strong></p>
   <p>e.g. <span class ='string'>defen[cs]e</span> matches both “defence” and “defense”. <span class ='string'>[^...]</span> is the opposite, matching anything but what is in the set, e.g. <span class ='string'>&lt;[^>]&gt;</span> matches an html tag with any content. 
-An hyphen <span class ='string'> - </span> can indicate a range of characters in a set e.g. <span class ='string'>[a-fA-F] [0-5]</span>.
+An hyphen <span class ='string'>-</span> can indicate a range of characters in a set e.g. <span class ='string'>[a-fA-F] [0-5]</span>.
 </p>   
 </div>
 <button class="collapsible">Matching a literal hyphen literally when in a set
 </button>
 <div class="content">
-  <p><strong>Place the hyphen in first or last position in the set, or escape it.
+  <p><strong>Place the hyphen in first or last position in the set, or escape it
 </strong></p>
-  <p>e.g. <span class ='string'>[-abc] [abc-] [ab\-c]</span>.</p>
+  <p>e.g. <span class ='string'>[-abc] [abc-] [ab\-c]</span></p>
 </div>
 <button class="collapsible">Matching a special character literally when in a set</button>
 <div class="content">
-  <p><strong>Special characters lose their special meaning inside sets.</strong></p>
-  <p>e.g. the special characters in the set <span class ='string'>[().,*+?|]</span> match themselves literally.</p>
+  <p><strong>Special characters lose their special meaning inside sets, except for backslash <span class ='code'>\</span></strong></p>
+  <p>e.g. the special characters in the set <span class ='string'>[().,*+?|]</span> match themselves literally</p>
 </div>
 <button class="collapsible">Matching a special character literally when outside a set</button>
 <div class="content">
-  <p><strong>Precede the special character with a backslash <span class ='code'> \ </span>to remove its special meaning.</strong></p>
+  <p><strong>Precede the special character with a backslash <span class ='code'> \ </span>to remove its special meaning</strong></p>
   <p>e.g <span class ='string'>\.</span> matches a literal dot, such as in "hello.world", <span class ='string'>\?</span> matches a literal question mark, such as in "maybe?", <span class ='string'>\*</span> matches a literal asterisk, such as in "a * b". </p>
 </div>
-<button class="collapsible">Matching a literal backslash when outside a set</button>
+<button class="collapsible">Matching a literal backslash</button>
 <div class="content">
   <p><strong>Use double backslashes <span class ='code'>\\</span> to escape the backslash, using a raw string (prefixed with “r”).</strong></p>
-  <p>e.g. r’<span class ='string'>\\’</span> or <span class ='string'>r’[\\]’</span> matches “\” in “foo\bar”.
+  <p>e.g. <span class ='string'>r’\\’</span> or <span class ='string'>r’[\\]’</span> matches “\” in “foo\bar”.
 It’s good practice to use a raw string to specify a regular expression in Python whenever it contains backslashes.
 </p>
 </div>
 <button class="collapsible">Making a character or set optional (any number of occurrences possible)</button>
 <div class="content">
-  <p><strong>Append an asterisk<span class ='code'> * </span>to the expression</strong></p>
-  <p>e.g, <span class ='string'>a*</span> matches zero or more “a” characters (“”, “a”, “aa”, “aaa”, …)
+  <p><strong>Append an asterisk <span class ='code'>*</span> to the expression</strong></p>
+  <p>e.g. <span class ='string'>a*</span> matches zero or more "a" characters ("", "a", "aa", "aaa", …). 
 <span class ='string'>x*, \d*, \w*, </span> … etc. can match a zero-length string or sequence(“”).</p>
 </div>
 <button class="collapsible">Making a character or set optional (zero or one occurrence possible)</button>
 <div class="content">
-  <p><strong>Append a question mark<span class ='code'> ? </span>to the expression</strong></p>
+  <p><strong>Append a question mark <span class ='code'>?</span> to the expression</strong></p>
   <p>e.g. <span class ='string'>colou?r</span> matches both “color” and “colour”,
 <span class ='string'>defen[dcs]?[e]?</span> matches “defend”, “defence” and “defense”.</p>
 </div>
 <button class="collapsible">Making a character or set a requirement for a match (one or more occurrences possible </button>
 <div class="content">
-  <p><strong>Append a plus sign<span class ='code'> + </span>to the expression
+  <p><strong>Append a plus sign <span class ='code'>+</span> to the expression
 </strong></p>
   <p>e.g. <span class ='string'>\d+</span> matches one or more digits (9, 42, 321, …).</p>
 </div>
-<button class="collapsible">Getting the shortest possible match when using the <span class ='code'>*, +, ?</span> quantifiers (non-greedy, or lazy behaviour)</button>
+<button class="collapsible">Getting the shortest possible match when using the *, +, ? quantifiers (non-greedy, or lazy behaviour)</button>
 <div class="content">
   <p><strong>Put a question mark after the quantifier symbol: 
 <span class ='code'>*?, +?, ??</span>
@@ -118,15 +118,15 @@ It’s good practice to use a raw string to specify a regular expression in Pyth
 <div class="content">
   <p><strong>Put <span class ='code'>{m, n}</span> after the expression</strong></p>
   <p>e.g. <span class ='string'>\d{1, 3}</span> matches numbers made of one up to three digits. 
-<span class ='code'>{,n}</span} is identical to <span class ='code'>{0,n}</span>.</p>
+<span class ='code'>{,n}</span> is identical to <span class ='code'>{0,n}</span>.</p>
 </div>
 <button class="collapsible">Specifying a minimum number of repetitions of a character or set to be a match (no upper limit)</button>
 <div class="content">
   <p><strong>Put <span class ='code'>{m,}</span> after the expression</strong></p>
   <p><span class ='code'>{m,}</span> means at least <span class ='code'>m</span> times, 
-<span class ='code'>{,}</span> is identical to <span class ='code'>{0,}</span> or <span class ='code'> * </span>.</p>
+<span class ='code'>{,}</span> is identical to <span class ='code'>{0,}</span> or <span class ='code'>*</span>.</p>
 </div>
-<button class="collapsible">Getting the shortest possible match when using the <span class ='code'>{m, n}</span> quantifiers (non-greedy, or lazy behaviour)</button>
+<button class="collapsible">Getting the shortest possible match when using the {m, n} quantifiers (non-greedy, or lazy behaviour)</button>
 <div class="content">
   <p><strong>Put a question mark after the expression: <span class ='code'>{m,n}?</span></strong></p>
   <p>e.g.  <span class ='string'>X{3,5}?</span>.  <span class ='code'>{m,n}</span> is “greedy”, trying to match the longest possible string.</p>
@@ -134,13 +134,13 @@ It’s good practice to use a raw string to specify a regular expression in Pyth
 <button class="collapsible">Text required to be at the beginning of a string or of a new line to be a match</button>
 <div class="content">
   <p><strong>Put the caret <span class ='code'>^</span> anchor or <span class ='code'>\A</span> in first position</strong></p>
-  <p>e.g.  <span class ='string'>^Once, \AOnce, ^!!</span>. With re.match(), the caret <span class ='code'>^</span> anchor is redundant. 
+  <p>e.g.  <span class ='string'>^Once, \AOnce, ^!!</span>. With <span class ='code'>re.match()</span>, the caret <span class ='code'>^</span> anchor is redundant. 
 In a searching function using the <span class ='code'>re.MULTILINE</span> flag, <span class ='code'>^</span> matches both at the beginning of the string and at the beginning of any line within the string, but only at the beginning of the whole string without the flag. <span class ='code'>re.MULTILINE</span> has no effect on <span class ='code'>\A</span>.  <span class ='code'>re.M</span> is shorthand for <span class ='code'>re.MULTILINE</span>.</p>
 </div>
 <button class="collapsible">Text required to be at the end of a string or of a new line to be a match</button>
 <div class="content">
   <p><strong>Put a dollar <span class ='code'>$</span> anchor or <span class ='code'>\Z</span> in last position</strong></p>
-  <p>e.g. <span class ='string'>time$, time\Z, \?$</span>
+  <p>e.g. <span class ='string'>time$, time\Z, \?$</span>. 
 In a searching function using the <span class ='code'>re.MULTILINE</span> flag, <span class ='code'>$</span> matches both at the end of the string and at the end of any line within the string, but only at the end of the whole string without the flag. <span class ='code'>re.MULTILINE</span> has no effect on <span class ='code'>\Z</span>. <span class ='code'>re.M</span> is shorthand for <span class ='code'>re.MULTILINE</span>. </p>
 </div>
     <button class="collapsible"> Text required to be at the beginning of words to be a match (such as prefixes) </button>
@@ -165,11 +165,11 @@ In a searching function using the <span class ='code'>re.MULTILINE</span> flag, 
 <button class="collapsible">Automatically adding backslashes in an expression to escape special characters</button>
 <div class="content">
   <p><strong>Use the <span class ='code'>re.escape()</span> method</strong></p>
-  <p><span class ='code'>re.escape()</span> saves you the trouble of putting in all the backslashes manually when you have many special characters that must be matched literally. It returns a copy of the expression with each nonword character (anything other than a letter, digit, or underscore) preceded by a backslash e.g. <span class ='string'>re.escape('red^green(blue)|yellow')</span> returns the expression string 'red\^green\(blue\)\|yellow' , and <span class ='string'>re.search(re.escape('red^green(blue)|yellow'), 'red^green(blue)|yellow')</span> matches "red^green(blue)|yellow" literally. </p>
+  <p><span class ='code'>re.escape()</span> saves you the trouble of putting in all the backslashes manually when you have many special characters that must be matched literally. It returns a copy of the expression with each nonword character (anything other than a letter, digit, or underscore) preceded by a backslash e.g. <span class ='string'>re.escape('red^green(blue)|yellow')</span> returns the expression string <span class ='code'>'red\^green\(blue\)\|yellow'</span>, and <span class ='string'>re.search(re.escape('red^green(blue)|yellow'), 'red^green(blue)|yellow')</span> matches "red^green(blue)|yellow" literally. </p>
 </div>
 <button class="collapsible">Specify a set of alternatives on which to match</button>
 <div class="content">
-  <p><strong>Insert the pipe character <span class ='code'> | </span> between the alternative expressions</strong></p>
+  <p><strong>Insert the pipe character <span class ='code'>|</span> between the alternative expressions</strong></p>
   <p>e.g. <span class ='string'>[0-9]+|[a-f]+</span> means one or more digits, or one or more smallcaps from a to f.
 Alternation is non-greedy: stops when the first match is found, looking at the expressions from left to right e.g. <span class ='string'>re.search('a|b|c', 'abc')</span> matches “a”. </p>
 </div>
