--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ An hyphen <span class ='string'>-</span> can indicate a range of characters in a
 </div>
 <button class="collapsible">Matching a special character literally when in a set</button>
 <div class="content">
-  <p><strong>Special characters lose their special meaning inside sets, except for backslash <span class ='code'>\</span></strong></p>, and for the caret character <span class ='code'>^</span></strong></p> when in first position inside the set  
+  <p><strong>Special characters lose their special meaning inside sets, except for backslash <span class ='code'>\</span> and for the caret character <span class ='code'>^</span> when in first position inside the set</strong></p>  
   <p>e.g. the special characters in the set <span class ='string'>[().,*+?|]</span> match themselves literally</p>
 </div>
 <button class="collapsible">Matching a special character literally when outside a set</button>
