--- a/index.html
+++ b/index.html
@@ -3,11 +3,45 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Quick reference for regular expressions in Python</title>
-<link rel="stylesheet" href="./styles.css" />
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
+  integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+<link rel="stylesheet" href="./styles.css" />  
 </head>
 <body>
-
+<nav class="navbar navbar-expand-md navbar-dark bg-dark">
+  <div class="container">
+    <a class="navbar-brand" href="#">Regex4Python</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav" 
+      aria-controls="nav" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+    <div class="collapse navbar-collapse" id="nav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="#matching">Patterns</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#groups">Groups</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#search">Searching</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#flags">Flags</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#sub">Replacing</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#objects">Match objects</a>
+          </li>
+        </ul>
+        <form role="search">
+          <input class="form-control" type="search" placeholder="Search" aria-label="Search">
+        </form>
+    </div>
+  </div>
+  </nav>
 <h1>Quick reference for regular expressions in Python</h1>
   
   <nav>
